Fix sidebar on mobile, no more calcs everythings a fixed percent so we can easily calculate the top value of sidebar so that if fits right every time.  Just don't fuck with the sidebar.

--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@ footer {
     position: fixed;
     bottom: 0;
     left: 0;
-    height: 40px;
+    height: 5%;
     width: 100%;
     box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, 0.5);
 }
