--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 70px;
+    height: 10%;
     padding: 1rem;
     /* height: 10%; */
     /* display: flex; */
@@ -31,7 +31,7 @@ header .input.search {
 
 @media only screen and (min-width: 480px) and (max-width: 767px){
     header{
-        height: auto;
+        height: 10%;
     }
 }
 
@@ -44,8 +44,6 @@ header .input.search {
 
 @media only screen and (min-width: 768px){
     .content>.logo>img {
-        /* height: 8rem; */
-        /* margin: auto; */
         width: auto;
     }
     .content>.logo {
