--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -24,7 +24,7 @@
     width: 20%;
     /* Full height minus height of header and footer */
     /* height: calc(100% - 70px - 40px); */
-    height: 100%;
+    height: 85%;
     /* align-items: stretch; */
     flex-grow: 1;
     margin: 0;
@@ -149,8 +149,8 @@
 }
 @media only screen and (min-width: 480px) and (max-width: 767px){
     .sidebar{
-        top: 112px;
-        height: calc(100% - 112px - 40px);
+        top: 10%;
+        height: 85%;
     }
     .sidebarImage {
         width: 100px;
@@ -160,7 +160,7 @@
 
 @media only screen and (min-width: 768px){
     .sidebar {
-        top: 70px;
+        top: 10%;
     }
     .sidebarImage {
         /* width: 75%; */
